exercises/03_basics/09_trybuild/tests/fail/enum.rs
use trybuild_exercise::FieldNames;

#[derive(FieldNames)]
enum Color {
    Red,
    Green,
}

fn main() {}
