exercises/03_basics/09_trybuild/tests/fail/enum.stderr
error: proc-macro derive panicked
 --> tests/fail/enum.rs:3:10
  |
3 | #[derive(FieldNames)]
  |          ^^^^^^^^^^
  |
  = help: message: FieldNames only supports structs
